Creation Class : Seance(Gestion des séances) , Tab Seances (Gestion de l'ensemble pour le planing) et Semaine(Gestion de l'affichage de la date dans le planning)
Modifs CreaModule

--- a/src/View/JTableFenetres/JTableCreaModule.form
+++ b/src/View/JTableFenetres/JTableCreaModule.form
@@ -67,21 +67,23 @@
           </Group>
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="msgDureeFormation" min="-2" pref="499" max="-2" attributes="0"/>
-                          <Component id="jScrollPane1" min="-2" pref="518" max="-2" attributes="0"/>
-                          <Component id="msgDureeSeanceFormation" alignment="0" min="-2" pref="499" max="-2" attributes="0"/>
-                          <Component id="msgNomFormation" alignment="0" min="-2" pref="499" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="163" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" pref="402" max="-2" attributes="0"/>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="92" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="jScrollPane1" min="-2" pref="518" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="msgDureeFormation" min="-2" pref="499" max="-2" attributes="0"/>
+                              <Component id="msgDureeSeanceFormation" alignment="0" min="-2" pref="499" max="-2" attributes="0"/>
+                              <Component id="msgNomFormation" alignment="0" min="-2" pref="499" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="127" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -135,7 +137,7 @@
               <Component id="msgDureeFormation" min="-2" pref="27" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="175" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
               <Component id="messageErreur" min="-2" pref="31" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
           </Group>
@@ -183,6 +185,9 @@
                   <Renderer/>
                 </Column>
               </TableColumnModel>
+            </Property>
+            <Property name="gridColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
